<resources>
    <string name="app_name">Notes Keeper</string>
    <string name="user_name">Name</string>
    <string name="notes_header_stub">Header</string>
    <string name="notes_date_stub">31.05.2022</string>
    <string name="noteScroll_title">Your Notes</string>
    <string name="fab_note_action_content_description">some description</string>
    <string name="change_user">Change user</string>
    <string name="create_note">Create note</string>
    <string name="create_shared_note">Create shared note</string>
    <string name="add_contact">Add new contact</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_text">Note…</string>
    <string name="save">Save</string>
    <string name="add_friends">ADD FRIEND</string>
    <string name="new_note">New note</string>
    <string name="enter_name">Enter name</string>
    <string name="log_in">Log in!</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="note_img">Note img</string>
    <string name="app_name_with_carry">Notes\n keeper</string>
    <string name="delete_note">Delete note</string>
    <string name="leave_comment">Leave a comment</string>
    <string name="actions">Actions</string>
    <string name="comment_stub">Comment…</string>
    <string name="send">SEND!</string>
    <string name="leave_a_comment">Leave a comment…</string>
    <string name="user_login">Login</string>
    <string name="are_you_new_here">Are you new here?</string>
    <string name="register_now">SIGN UP NOW</string>
    <string name="nickname">Username</string>
    <string name="register_button">Sign up!</string>
    <string name="friends">Friends</string>
    <string name="find_friend">Find friend</string>
    <string name="friend_name">Friend name</string>
    <string name="select_friends">Select friends for sharing</string>

</resources>