<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="ru.kudasheva.noteskeeper.createnote.CreateNoteViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <EditText
            android:id="@+id/enter_title_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="10"
            android:autofillHints="Note"
            android:hint="@string/enter_title"
            android:text="@={viewModel.title}"
            android:inputType="text"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/add_friend_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="13dp"
            android:layout_weight="10"
            android:onClick="@{v -> viewModel.onAddFriendButtonClicked()}"
            android:text="@string/add_friends"/>

        <EditText
            android:id="@+id/enter_note_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="13dp"
            android:layout_weight="70"
            android:text="@={viewModel.noteBody}"

            android:autofillHints="Note"
            android:background="@color/note"
            android:gravity="top|start"
            android:hint="@string/enter_text"
            android:inputType="textMultiLine"
            android:lines="20"
            android:minLines="6"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/save_note_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="13dp"
            android:layout_weight="10"
            android:onClick="@{v -> viewModel.onSaveNoteButtonClicked()}"
            android:text="@string/save"/>

    </LinearLayout>
</layout>